// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel.vue renders correctly 1`] = `
<div
  class="template-wrapper"
>
  <header
    class="header"
  >
    <form
      class="header__form"
    >
      <input
        class="header__search js-search"
        disabled="disabled"
        placeholder="Search For Any Image"
        type="search"
      />
       
      <!---->
    </form>
  </header>
   
  <section
    class="message error"
  >
    <p
      class="error__text"
    >
      
          Failed to connect to the Pixabay API.
      
    </p>
  </section>
   
  <!---->
</div>
`;

exports[`Carousel.vue renders correctly after changing the search state 1`] = `
<div
  class="template-wrapper"
>
  <header
    class="header"
  >
    <form
      class="header__form"
    >
      <input
        class="header__search js-search"
        disabled="disabled"
        placeholder="Search For Any Image"
        type="search"
      />
       
      <input
        class="header__reset js-reset"
        type="reset"
        value="Clear"
      />
    </form>
  </header>
   
  <section
    class="message loading"
  >
    <p
      class="loading__text"
    >
      Loading...
    </p>
  </section>
   
  <!---->
</div>
`;
